src/clients/snapshots/cake__clients__types__tests__session_json_hook_event_without_optional_fields.snap
---
source: src/clients/types.rs
expression: session_record_json(record)
---
{
  "command": "./session-start.sh",
  "decision": "none",
  "duration_ms": 17,
  "event": "session_start",
  "fail_closed": true,
  "resolved_decision": "none",
  "source_file": "/workspace/cake/.cake/hooks/session-start.sh",
  "stderr": "no exit code",
  "stdout": "",
  "task_id": "550e8400-e29b-41d4-a716-446655440001",
  "timestamp": "2026-05-10T12:34:56Z",
  "type": "hook_event"
}
