src/clients/snapshots/cake__clients__types__tests__session_json_message_with_id_and_status.snap
---
source: src/clients/types.rs
assertion_line: 1568
expression: session_json_for(&item)
---
{
  "content": "Response",
  "id": "msg-123",
  "role": "assistant",
  "status": "completed",
  "timestamp": "2026-05-10T00:00:00Z",
  "type": "message"
}
