src/clients/snapshots/cake__clients__types__tests__session_json_prompt_context.snap
---
source: src/clients/types.rs
expression: session_record_json(record)
---
{
  "content": "Use the project instructions.",
  "role": "developer",
  "session_id": "550e8400-e29b-41d4-a716-446655440000",
  "task_id": "550e8400-e29b-41d4-a716-446655440001",
  "timestamp": "2026-05-10T12:34:56Z",
  "type": "prompt_context"
}
