src/clients/snapshots/cake__clients__types__tests__session_json_reasoning_with_content.snap
---
source: src/clients/types.rs
assertion_line: 1586
expression: session_json_for(&item)
---
{
  "content": [
    {
      "text": "deep analysis",
      "type": "reasoning_text"
    }
  ],
  "encrypted_content": "gAAAAABencrypted...",
  "id": "r-1",
  "summary": [
    "step 1"
  ],
  "timestamp": "2026-05-10T00:00:00Z",
  "type": "reasoning"
}
