src/clients/snapshots/cake__clients__types__tests__stream_record_json_function_call.snap
---
source: src/clients/types.rs
expression: stream_json_for(&item)
---
{
  "arguments": "{\"cmd\":\"ls\"}",
  "call_id": "call-1",
  "id": "fc-1",
  "name": "bash",
  "type": "function_call"
}
