src/clients/snapshots/cake__clients__types__tests__stream_record_json_function_call_output.snap
---
source: src/clients/types.rs
expression: stream_json_for(&item)
---
{
  "call_id": "call-1",
  "output": "result",
  "type": "function_call_output"
}
