src/clients/snapshots/cake__clients__types__tests__stream_record_json_message_with_id_and_status.snap
---
source: src/clients/types.rs
expression: stream_json_for(&item)
---
{
  "content": "Response",
  "id": "msg-123",
  "role": "assistant",
  "status": "completed",
  "type": "message"
}
