src/clients/snapshots/cake__clients__types__tests__stream_record_json_reasoning_plain_summary.snap
---
source: src/clients/types.rs
expression: stream_json_for(&item)
---
{
  "id": "r-1",
  "summary": [
    "step 1",
    "step 2"
  ],
  "type": "reasoning"
}
